--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="">
   <app-root></app-root>
 </body>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </html>
